# tree-sitter-brightscript

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  bruh.brs  grammar.js  log.html  main.brs  output.html  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py
bindings/c/: tree-sitter-brightscript.h  tree-sitter-brightscript.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_brightscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
docs/: wasm-build-process.md
queries/: folds.scm  highlights.scm  indents.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: arrays.txt  assoc_arrays.txt  for_statements.txt  if_statements.txt  statements.txt  statements_1.txt  try_catch_statements.txt  while_statements.txt
